--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,12 @@
-<nav class="">
+<nav class="navbar navbar-default">
     <ul>
         <li> <%= link_to "Store Home", store_path %> </li>
         <% if !!@cart %>
           <li> <%= link_to "Cart", cart_path(current_cart) %></li>
         <% end %>
+        <% if user_signed_in? %>
+					<li> <%= current_user.name %></li>
+					<li> <%= link_to  "Sign Out", destroy_user_session_path(@user) %> </li>
+					<% end %>
     </ul>
 </nav>
