--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
     <ul>
         <li> <%= link_to "Store Home", store_path %> </li>
         <% if !!@cart %>
-          <li> <%= link_to "Cart", cart_path(current_cart) %></li>
+          <li> <%= link_to "Cart", cart_path(current_user.current_cart) %></li>
         <% end %>
 				<% if user_signed_in? %>
 					<li> Welcome, <%= current_user.email %></li>
